Add note about fish bar item

--- a/README
+++ b/README
@@ -8,3 +8,7 @@ http://fish.secure.la/
 Getting long lines cut off by the irc server? Try setting
 irc.*.split_msg_max_length to something smaller:
     /set irc.server_default.split_msg_max_length 400
+
+You can have an indicator showing whether messages in a buffer are encrypted by
+adding the fish item to a bar:
+    /eval /set weechat.bar.status.items ${weechat.bar.status.items},fish
